# dzen-dhall

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  default.nix  dzen-dhall.cabal  package.yaml  shell.nix  stack.yaml
app/: Main.hs
app/DzenDhall/: Runtime.hs
dhall/: config.dhall
dhall/lib/: index.dhall
dhall/lib/List/: concatMap.dhall  generate.dhall  intersperse.dhall
dhall/src/: AbsolutePosition.dhall  Assertion.dhall  Bar.dhall  BarSettings.dhall  Button.dhall  Carrier.dhall  Check.dhall  ClosingTag.dhall  Color.dhall  Configuration.dhall  EscapeMode.dhall  Event.dhall  Handler.dhall  Hook.dhall  Image.dhall  Marquee.dhall  MarqueeSettings.dhall  OpeningTag.dhall  PluginMeta.dhall  Position.dhall  Slider.dhall  Source.dhall  SourceSettings.dhall  StateTransitionTable.dhall  Token.dhall  Variable.dhall  VerticalDirection.dhall  defaultBarSettings.dhall  defaultSlider.dhall  definitions.dhall  makeBar.dhall  mkConfigs.dhall  mkPlugin.dhall  mkSpec.dhall  types.dhall  utils.dhall
dhall/src/settings/bar/: default.dhall  type.dhall
dhall/types/: AbsolutePosition.dhall  Address.dhall  Assertion.dhall  Bar.dhall  Carrier.dhall  Configuration.dhall  Direction.dhall  Event.dhall  Fade.dhall  Image.dhall  Marquee.dhall  OpeningTag.dhall  Padding.dhall  Plugin.dhall  PluginMeta.dhall  Position.dhall  Settings.dhall  Shell.dhall  Slider.dhall  Slot.dhall  Source.dhall  State.dhall  StateMap.dhall  StateTransitionTable.dhall  Token.dhall  Transition.dhall  Variable.dhall  VerticalDirection.dhall  package.dhall
dhall/utils/: addHook.dhall  defaultBarSettings.dhall  defaultSettings.dhall  defaults.dhall  emit.dhall  get.dhall  getCurrentState.dhall  getEvent.dhall  getNextState.dhall  getState.dhall  intersperse.dhall  mkAddress.dhall  mkBash.dhall  mkBashHook.dhall  mkBashWithBinaries.dhall  mkConfigs.dhall  mkEvent.dhall  mkFade.dhall  mkMarquee.dhall  mkPlugin.dhall  mkReader.dhall  mkSeparateBy.dhall  mkSlider.dhall  mkState.dhall  mkTransition.dhall  mkTransitions.dhall  mkVariable.dhall  package.dhall  query.dhall  set.dhall  showAddress.dhall  showButton.dhall  showEvent.dhall  showState.dhall  showVariable.dhall
misc/: update-data-files.sh
nix/: dhall.nix  dzen-dhall.nix  nixpkgs.json  release.nix
nix/hackage/: atomic-write.nix  dhall.nix  http-conduit.nix  prettyprinter.nix  repline.nix  th-lift-instances.nix  th-lift.nix
src/: DzenDhall.hs
src/DzenDhall/: AST.hs  App.hs  Arguments.hs  Config.hs  Data.hs  Event.hs  Extra.hs  Parse.hs  Parser.hs  Plug.hs  Run.hs  Runtime.hs  Templates.hs  Tree.hs  Validate.hs  Validation.hs
src/DzenDhall/AST/: Render.hs
src/DzenDhall/Animation/: Marquee.hs  Slider.hs
src/DzenDhall/App/: Forked.hs  Run.hs  StartingUp.hs
src/DzenDhall/Commands/: Plug.hs  Unplug.hs  Validate.hs
src/DzenDhall/Runtime/: Data.hs
test/: FileQuoter.hs  Main.hs
test/DzenDhall/Test/: AST.hs  Arguments.hs  Config.hs  Event.hs  Parser.hs  Plug.hs
test/DzenDhall/Test/AST/: Render.hs
test/DzenDhall/Test/Animation/: Marquee.hs
test/dhall/: BarSettings.dhall  Button.dhall  Check.dhall  ClosingTag.dhall  Configuration.dhall  EscapeSettings.dhall  Event.dhall  Fade.dhall  Marquee.dhall  MarqueeSettings.dhall  MouseButton.dhall  OpeningTag.dhall  Padding.dhall  PluginMeta.dhall  Settings.dhall  Source.dhall  SourceSettings.dhall  StateTransitionTable.dhall  Token.dhall
test/dhall/configs/: assertions.dhall  automata.dhall  deduplication.dhall  getEvent.dhall  marquees.dhall  scopes.dhall  sliders.dhall  variables.dhall
