cabal-version:       2.4

name:                dzen-dhall
version:             0.0.0.1
synopsis:            Configure dzen2 bars in Dhall language.
-- description:
homepage:            https://github.com/klntsky/dzen-dhall
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              klntsky
maintainer:          klntsky@gmail.com
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md, README.md
data-files:          dhall/config.dhall
                     dhall/lib/index.dhall
                     dhall/lib/List/concat.dhall
                     dhall/lib/List/generate.dhall
                     dhall/lib/List/intersperse.dhall
                     dhall/lib/List/map.dhall
                     dhall/lib/List/null.dhall
                     dhall/src/Bar.dhall
                     dhall/src/BarSettings.dhall
                     dhall/src/ClosingTag.dhall
                     dhall/src/Color.dhall
                     dhall/src/Configuration.dhall
                     dhall/src/defaultBarSettings.dhall
                     dhall/src/definitions.dhall
                     dhall/src/EscapeMode.dhall
                     dhall/src/Marquee.dhall
                     dhall/src/mkConfigs.dhall
                     dhall/src/mkPlugin.dhall
                     dhall/src/OpeningTag.dhall
                     dhall/src/Plugin.dhall
                     dhall/src/Slider.dhall
                     dhall/src/Source.dhall
                     dhall/src/Token.dhall
                     dhall/src/types.dhall
                     dhall/src/utils.dhall
                     dhall/src/VerticalDirection.dhall
library
  exposed-modules:     DzenDhall
                       DzenDhall.Animation.Marquee
                       DzenDhall.App
                       DzenDhall.Arguments
                       DzenDhall.Config
                       DzenDhall.Data
                       DzenDhall.Extra
                       DzenDhall.Parser
                       DzenDhall.Run
                       DzenDhall.Runtime
                       Paths_dzen_dhall
  other-modules:
  other-extensions:
  default-extensions:  DeriveFunctor
                       DeriveGeneric
                       FlexibleContexts
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MultiWayIf
                       NamedFieldPuns
                       OverloadedStrings
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables

  build-depends:       base ^>=4.12.0.0,
                       async,
                       dhall,
                       directory,
                       filepath,
                       microlens,
                       microlens-th,
                       optparse-applicative,
                       parsec,
                       process,
                       text,
                       time,
                       transformers,
                       unix
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

executable dzen-dhall

  main-is:             Main.hs
  other-modules:
  other-extensions:
  build-depends:       base ^>=4.12.0.0, dzen-dhall
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -threaded

test-suite tasty
  type:                exitcode-stdio-1.0
  other-modules:       Paths_dzen_dhall
                       FileQuoter
                       DzenDhall.Test.AST
                       DzenDhall.Test.Animation.Marquee
                       DzenDhall.Test.Arguments
                       DzenDhall.Test.Config
                       DzenDhall.Test.Parser
  default-extensions:  OverloadedStrings, QuasiQuotes, LambdaCase
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       dzen-dhall,
                       base,
                       dhall,
                       filepath,
                       text,
                       microlens,
                       template-haskell,
                       HUnit,
                       tasty,
                       tasty-hunit,
                       tasty-hspec,
                       hspec,
                       parsec,
                       optparse-applicative
  hs-source-dirs:      test
  default-language:    Haskell2010
